--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css"/>
-    <title>React Reading List</title>
+    <title>GT Bootcamp Finale: Demo Day</title>
   </head>
   <body>
     <noscript>
